update notebook with formatted (black) python file code

--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1818,103 +1818,113 @@
     "\n",
     "# modelop.init\n",
     "def begin():\n",
-    "    \n",
+    "\n",
     "    global logreg_classifier\n",
     "    global predictive_features\n",
     "    global df_baseline\n",
     "    global explainer\n",
-    "    \n",
+    "\n",
     "    # load pickled logistic regression model\n",
     "    logreg_classifier = pickle.load(open(\"logreg_classifier.pickle\", \"rb\"))\n",
-    "    \n",
+    "\n",
     "    # load pickled predictive feature list\n",
-    "    predictive_features = pickle.load(open('predictive_features.pickle', 'rb'))\n",
-    "    \n",
+    "    predictive_features = pickle.load(open(\"predictive_features.pickle\", \"rb\"))\n",
+    "\n",
     "    # load df_baseline_scored for metrics (specifically drift calculations)\n",
-    "    df_baseline = pd.read_json('df_baseline_scored.json', orient='records', lines=True)\n",
-    "    \n",
+    "    df_baseline = pd.read_json(\"df_baseline_scored.json\", orient=\"records\", lines=True)\n",
+    "\n",
     "    # load shap explainer\n",
-    "    explainer = pickle.load(open('explainer.pickle', 'rb'))\n",
-    "    \n",
-    "    \n",
+    "    explainer = pickle.load(open(\"explainer.pickle\", \"rb\"))\n",
+    "\n",
+    "\n",
     "def preprocess(data):\n",
     "    # There are only two unique values in data.number_people_liable.\n",
     "    # Treat it as a categorical feature\n",
-    "    data['number_people_liable'] = data['number_people_liable'].astype('object')\n",
-    "    \n",
+    "    data[\"number_people_liable\"] = data[\"number_people_liable\"].astype(\"object\")\n",
+    "\n",
     "    # one-hot encode data with pd.get_dummies()\n",
     "    data = pd.get_dummies(data)\n",
-    "    \n",
+    "\n",
     "    # in case features don't exist that are needed for the model (possible when dummying)\n",
     "    # will create column of zeros for that feature\n",
     "    for col in predictive_features:\n",
     "        if col not in data.columns:\n",
     "            data[col] = np.zeros(data.shape[0])\n",
-    "    \n",
+    "\n",
     "    return data\n",
+    "\n",
     "\n",
     "# modelop.score\n",
     "def action(data):\n",
-    "    \n",
+    "\n",
     "    # Turn data into DataFrame\n",
     "    data = pd.DataFrame(data)\n",
-    "    \n",
+    "\n",
     "    # preprocess data\n",
     "    data = preprocess(data)\n",
-    "    \n",
+    "\n",
     "    # generate predictions\n",
     "    data[\"predicted_score\"] = logreg_classifier.predict(data[predictive_features])\n",
-    "    data['predicted_probs'] = [x[1] for x in logreg_classifier.predict_proba(data[predictive_features])]\n",
-    "    \n",
+    "    data[\"predicted_probs\"] = [\n",
+    "        x[1] for x in logreg_classifier.predict_proba(data[predictive_features])\n",
+    "    ]\n",
+    "\n",
     "    # MOC expects the action function to be a *yield* function\n",
     "    return data.to_dict(orient=\"records\")\n",
-    "    # yield data.to_dict(orient=\"records\")  \n",
-    "    \n",
+    "    # yield data.to_dict(orient=\"records\")\n",
+    "\n",
+    "\n",
     "# modelop.metrics\n",
     "def metrics(data):\n",
     "    # dictionary to hold final metrics\n",
     "    metrics = {}\n",
-    "    \n",
+    "\n",
     "    # convert data into DataFrame\n",
     "    data = pd.DataFrame(data)\n",
-    "    \n",
+    "\n",
     "    # getting dummies for shap values\n",
     "    data_processed = preprocess(data)[predictive_features]\n",
-    "    \n",
+    "\n",
     "    # calculate metrics\n",
-    "    f1 = f1_score(data['label_value'], data['score'])\n",
-    "    cm = confusion_matrix(data['label_value'], data['score'])\n",
-    "    labels = ['label_1', 'label_2']\n",
+    "    f1 = f1_score(data[\"label_value\"], data[\"score\"])\n",
+    "    cm = confusion_matrix(data[\"label_value\"], data[\"score\"])\n",
+    "    labels = [\"label_1\", \"label_2\"]\n",
     "    cm = matrix_to_dicts(cm, labels)\n",
-    "    fpr, tpr, thres = roc_curve(data['label_value'], data['predicted_probs'])\n",
-    "    auc_val = roc_auc_score(data['label_value'], data['predicted_probs'])\n",
-    "    rc = [{'fpr': x[0], 'tpr': x[1]} for x in list(zip(fpr, tpr))]\n",
-    "    \n",
+    "    fpr, tpr, thres = roc_curve(data[\"label_value\"], data[\"predicted_probs\"])\n",
+    "    auc_val = roc_auc_score(data[\"label_value\"], data[\"predicted_probs\"])\n",
+    "    rc = [{\"fpr\": x[0], \"tpr\": x[1]} for x in list(zip(fpr, tpr))]\n",
+    "\n",
     "    # categorical/numerical columns for drift\n",
     "    categorical_features = [\n",
-    "        f for f in list(metrics_sample.select_dtypes(include=['category', 'object'])) \n",
+    "        f\n",
+    "        for f in list(metrics_sample.select_dtypes(include=[\"category\", \"object\"]))\n",
     "        if f in df_baseline.columns\n",
     "    ]\n",
     "    numerical_features = [\n",
-    "        f for f in df_baseline.columns\n",
-    "        if f not in categorical_features\n",
+    "        f for f in df_baseline.columns if f not in categorical_features\n",
     "    ]\n",
-    "    numerical_features = [x for x in numerical_features if x not in ['id', 'score', 'label_value', 'predicted_probs']]\n",
+    "    numerical_features = [\n",
+    "        x\n",
+    "        for x in numerical_features\n",
+    "        if x not in [\"id\", \"score\", \"label_value\", \"predicted_probs\"]\n",
+    "    ]\n",
     "\n",
     "    # assigning metrics to output dictionary\n",
-    "    metrics['f1_score'] = f1\n",
-    "    metrics['confusion_matrix'] = cm\n",
-    "    metrics['auc'] = auc_val\n",
-    "    metrics['ROC'] = rc\n",
-    "    metrics['bias'] = get_bias_metrics(data)\n",
-    "    metrics['drift_metrics'] = get_drift_metrics(df_baseline, data, numerical_features, categorical_features)\n",
-    "    metrics['shap'] = get_shap_values(data_processed)\n",
-    "    \n",
+    "    metrics[\"f1_score\"] = f1\n",
+    "    metrics[\"confusion_matrix\"] = cm\n",
+    "    metrics[\"auc\"] = auc_val\n",
+    "    metrics[\"ROC\"] = rc\n",
+    "    metrics[\"bias\"] = get_bias_metrics(data)\n",
+    "    metrics[\"drift_metrics\"] = get_drift_metrics(\n",
+    "        df_baseline, data, numerical_features, categorical_features\n",
+    "    )\n",
+    "    metrics[\"shap\"] = get_shap_values(data_processed)\n",
+    "\n",
     "    # MOC expects the action function to be a *yield* function\n",
     "    # yield metrics\n",
     "    return metrics\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "def get_bias_metrics(data):\n",
     "    # To measure Bias towards gender, filter DataFrame\n",
     "    # to \"score\", \"label_value\" (ground truth), and\n",
@@ -1933,7 +1943,8 @@
     "\n",
     "    # DataFrame of calculated absolute metrics for each sample population group\n",
     "    absolute_metrics_df = xtab[\n",
-    "        ['attribute_name', 'attribute_value'] + absolute_metrics].round(2)\n",
+    "        [\"attribute_name\", \"attribute_value\"] + absolute_metrics\n",
+    "    ].round(2)\n",
     "\n",
     "    # Bias Metrics\n",
     "    b = Bias()\n",
@@ -1942,17 +1953,19 @@
     "    bias_df = b.get_disparity_predefined_groups(\n",
     "        xtab,\n",
     "        original_df=data_scored_processed,\n",
-    "        ref_groups_dict={'gender': 'male'},\n",
-    "        alpha=0.05, mask_significance=True\n",
+    "        ref_groups_dict={\"gender\": \"male\"},\n",
+    "        alpha=0.05,\n",
+    "        mask_significance=True,\n",
     "    )\n",
     "\n",
     "    # Disparity metrics added to bias DataFrame\n",
     "    calculated_disparities = b.list_disparities(bias_df)\n",
     "\n",
     "    disparity_metrics_df = bias_df[\n",
-    "        ['attribute_name', 'attribute_value'] + calculated_disparities]\n",
+    "        [\"attribute_name\", \"attribute_value\"] + calculated_disparities\n",
+    "    ]\n",
     "\n",
-    "    output_metrics_df = disparity_metrics_df # or absolute_metrics_df\n",
+    "    output_metrics_df = disparity_metrics_df  # or absolute_metrics_df\n",
     "\n",
     "    # Output a JSON object of calculated metrics\n",
     "    return output_metrics_df.to_dict(orient=\"records\")\n",
@@ -1964,28 +1977,38 @@
     "        cm.append(dict(zip(labels, matrix[idx, :].tolist())))\n",
     "    return cm\n",
     "\n",
+    "\n",
     "def get_drift_metrics(df_baseline, df_sample, numerical_cols, categorical_cols):\n",
     "    drift_metrics = {}\n",
-    "    drift_metrics['drift__es'] = es_metric(df_baseline, df_sample, numerical_cols)\n",
-    "    drift_metrics['drift__ks'] = ks_metric(df_baseline, df_sample, numerical_cols)\n",
-    "    drift_metrics['drift__js'] = js_metric(df_baseline, df_sample, numerical_cols, categorical_cols)\n",
-    "    drift_metrics['concept_drift__es'] = es_metric(df_baseline, df_sample, ['score'])\n",
-    "    drift_metrics['concept_drift__ks'] = ks_metric(df_baseline, df_sample, ['score'])\n",
-    "    drift_metrics['concept_drift__js'] = js_metric(df_baseline, df_sample, ['score'], [])\n",
+    "    drift_metrics[\"drift__es\"] = es_metric(df_baseline, df_sample, numerical_cols)\n",
+    "    drift_metrics[\"drift__ks\"] = ks_metric(df_baseline, df_sample, numerical_cols)\n",
+    "    drift_metrics[\"drift__js\"] = js_metric(\n",
+    "        df_baseline, df_sample, numerical_cols, categorical_cols\n",
+    "    )\n",
+    "    drift_metrics[\"concept_drift__es\"] = es_metric(df_baseline, df_sample, [\"score\"])\n",
+    "    drift_metrics[\"concept_drift__ks\"] = ks_metric(df_baseline, df_sample, [\"score\"])\n",
+    "    drift_metrics[\"concept_drift__js\"] = js_metric(\n",
+    "        df_baseline, df_sample, [\"score\"], []\n",
+    "    )\n",
     "    return drift_metrics\n",
-    "    \n",
+    "\n",
+    "\n",
     "def ks_metric(df1, df2, numerical_columns):\n",
-    "    ks_tests = [ks_2samp(data1=df1.loc[:,col], data2=df2.loc[:,col]) for col in numerical_columns]\n",
+    "    ks_tests = [\n",
+    "        ks_2samp(data1=df1.loc[:, col], data2=df2.loc[:, col])\n",
+    "        for col in numerical_columns\n",
+    "    ]\n",
     "    p_values = [x[1] for x in ks_tests]\n",
     "    list_of_pval = [f\"{col}_p-value\" for col in numerical_columns]\n",
     "    ks_pvalues = dict(zip(list_of_pval, p_values))\n",
     "    return ks_pvalues\n",
     "\n",
+    "\n",
     "def es_metric(df1, df2, numerical_columns):\n",
     "    es_tests = []\n",
     "    for col in numerical_columns:\n",
     "        try:\n",
-    "            es_test = epps_singleton_2samp(x=df1.loc[:,col], y=df2.loc[:,col])\n",
+    "            es_test = epps_singleton_2samp(x=df1.loc[:, col], y=df2.loc[:, col])\n",
     "        except np.linalg.LinAlgError:\n",
     "            es_test = [None, None]\n",
     "        es_tests.append(es_test)\n",
@@ -1994,60 +2017,62 @@
     "    es_pvalues = dict(zip(list_of_pval, p_values))\n",
     "    return es_pvalues\n",
     "\n",
+    "\n",
     "def js_metric(df1, df2, numerical_columns, categorical_columns):\n",
     "    res = {}\n",
     "    STEPS = 100\n",
     "    for col in categorical_columns:\n",
     "        col_baseline = df1[col].to_frame()\n",
     "        col_sample = df2[col].to_frame()\n",
-    "        col_baseline['source'] = 'baseline'\n",
-    "        col_sample['source'] = 'sample'\n",
-    "        \n",
+    "        col_baseline[\"source\"] = \"baseline\"\n",
+    "        col_sample[\"source\"] = \"sample\"\n",
+    "\n",
     "        col_ = pd.concat([col_baseline, col_sample], ignore_index=True)\n",
-    "        \n",
+    "\n",
     "        arr = (\n",
-    "            col_.groupby([col, 'source'])\n",
+    "            col_.groupby([col, \"source\"])\n",
     "            .size()\n",
     "            .to_frame()\n",
     "            .reset_index()\n",
-    "            .pivot(index=col, columns='source')\n",
+    "            .pivot(index=col, columns=\"source\")\n",
     "            .droplevel(0, axis=1)\n",
     "        )\n",
     "        arr_ = arr.div(arr.sum(axis=0), axis=1)\n",
     "        arr_.fillna(0, inplace=True)\n",
     "        js_distance = jensenshannon(\n",
-    "            arr_['baseline'].to_numpy(), arr_['sample'].to_numpy()\n",
+    "            arr_[\"baseline\"].to_numpy(), arr_[\"sample\"].to_numpy()\n",
     "        )\n",
     "        res.update({col: js_distance})\n",
-    "    \n",
+    "\n",
     "    for col in numerical_columns:\n",
     "        # fit guassian_kde\n",
     "        col_baseline = df1[col]\n",
     "        col_sample = df2[col]\n",
     "        kde_baseline = gaussian_kde(col_baseline)\n",
     "        kde_sample = gaussian_kde(col_sample)\n",
-    "        \n",
+    "\n",
     "        # get range of values\n",
     "        min_ = min(col_baseline.min(), col_sample.min())\n",
     "        max_ = max(col_baseline.max(), col_sample.max())\n",
     "        range_ = np.linspace(start=min_, stop=max_, num=STEPS)\n",
-    "        \n",
+    "\n",
     "        # sample range from KDE\n",
     "        arr_baseline_ = kde_baseline(range_)\n",
     "        arr_sample_ = kde_sample(range_)\n",
-    "        \n",
+    "\n",
     "        arr_baseline = arr_baseline_ / np.sum(arr_baseline_)\n",
     "        arr_sample = arr_sample_ / np.sum(arr_sample_)\n",
-    "        \n",
+    "\n",
     "        # calculate js distance\n",
     "        js_distance = jensenshannon(arr_baseline, arr_sample)\n",
-    "        \n",
+    "\n",
     "        res.update({col: js_distance})\n",
-    "        \n",
-    "    list_output = sorted(res.items(), key=lambda x: x[1],reverse=True)\n",
+    "\n",
+    "    list_output = sorted(res.items(), key=lambda x: x[1], reverse=True)\n",
     "    dict_output = dict(list_output)\n",
     "    return dict_output\n",
-    "        \n",
+    "\n",
+    "\n",
     "def get_shap_values(data):\n",
     "    # getting shap values for the test data\n",
     "    shap_values = explainer.shap_values(data)\n",
@@ -2055,8 +2080,9 @@
     "    # re-organizing and sorting the data\n",
     "    shap_values = np.mean(abs(shap_values), axis=0).tolist()\n",
     "    shap_values = dict(zip(data.columns, shap_values))\n",
-    "    sorted_shap_values = {k:v for k, v in sorted(shap_values.items(),\n",
-    "                                                 key=lambda x: x[1])}\n",
+    "    sorted_shap_values = {\n",
+    "        k: v for k, v in sorted(shap_values.items(), key=lambda x: x[1])\n",
+    "    }\n",
     "\n",
     "    # show the values\n",
     "    return sorted_shap_values"
