update labels for confusion matrix

--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
     "    # calculate metrics\n",
     "    f1 = f1_score(data[\"label_value\"], data[\"score\"])\n",
     "    cm = confusion_matrix(data[\"label_value\"], data[\"score\"])\n",
-    "    labels = [\"label_1\", \"label_2\"]\n",
+    "    labels = [\"Default\", \"Pay Off\"]\n",
     "    cm = matrix_to_dicts(cm, labels)\n",
     "    fpr, tpr, thres = roc_curve(data[\"label_value\"], data[\"predicted_probs\"])\n",
     "    auc_val = roc_auc_score(data[\"label_value\"], data[\"predicted_probs\"])\n",
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2395,21 +2395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Estimated covariance matrix does not have full rank. This indicates a bad choice of the input t and the test might not be consistent.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "get_disparity_predefined_group()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Estimated covariance matrix does not have full rank. This indicates a bad choice of the input t and the test might not be consistent.\n"
      ]
     }
    ],
@@ -2419,15 +2424,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'f1_score': 0.5342465753424657,\n",
-       " 'confusion_matrix': [{'label_1': 93, 'label_2': 49},\n",
-       "  {'label_1': 19, 'label_2': 39}],\n",
+       " 'confusion_matrix': [{'Default': 93, 'Pay Off': 49},\n",
+       "  {'Default': 19, 'Pay Off': 39}],\n",
        " 'auc': 0.7325157843613406,\n",
        " 'ROC': [{'fpr': 0.0, 'tpr': 0.0},\n",
        "  {'fpr': 0.0, 'tpr': 0.017241379310344827},\n",
@@ -2615,7 +2620,7 @@
        "  'checking_status_A14': 0.3695761671068209}}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
