add import shap

--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1163,6 +1163,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
+    "import shap\n",
     "from aequitas.preprocessing import preprocess_input_df\n",
     "from aequitas.group import Group\n",
     "from aequitas.bias import Bias\n",
