--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1856,7 +1856,7 @@
     "def action(data):\n",
     "\n",
     "    # Turn data into DataFrame\n",
-    "    data = pd.DataFrame(data)\n",
+    "    data = pd.DataFrame([data])\n",
     "\n",
     "    # preprocess data\n",
     "    data_processed = preprocess(data)\n",
@@ -2227,7 +2227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = next(action(scoring_sample))"
+    "scores = next(action(scoring_sample.iloc[0]))"
    ]
   },
   {
@@ -2304,144 +2304,28 @@
        "      <td>1</td>\n",
        "      <td>0.781304</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>500</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3123</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A11</td>\n",
-       "      <td>A32</td>\n",
-       "      <td>A40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>A143</td>\n",
-       "      <td>A152</td>\n",
-       "      <td>A173</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A191</td>\n",
-       "      <td>A201</td>\n",
-       "      <td>female</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.850061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>332</td>\n",
-       "      <td>60</td>\n",
-       "      <td>7408</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A12</td>\n",
-       "      <td>A32</td>\n",
-       "      <td>A40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>A143</td>\n",
-       "      <td>A152</td>\n",
-       "      <td>A174</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A191</td>\n",
-       "      <td>A201</td>\n",
-       "      <td>female</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.939763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>979</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1264</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A12</td>\n",
-       "      <td>A31</td>\n",
-       "      <td>A40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>A143</td>\n",
-       "      <td>A151</td>\n",
-       "      <td>A173</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A191</td>\n",
-       "      <td>A201</td>\n",
-       "      <td>male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.678382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>817</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1554</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2</td>\n",
-       "      <td>A14</td>\n",
-       "      <td>A34</td>\n",
-       "      <td>A43</td>\n",
-       "      <td>...</td>\n",
-       "      <td>A143</td>\n",
-       "      <td>A151</td>\n",
-       "      <td>A173</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A192</td>\n",
-       "      <td>A201</td>\n",
-       "      <td>female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.109759</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    id  duration_months  credit_amount  installment_rate  \\\n",
        "0  687               36           2862                 4   \n",
-       "1  500               24           3123                 4   \n",
-       "2  332               60           7408                 4   \n",
-       "3  979               15           1264                 2   \n",
-       "4  817                6           1554                 1   \n",
        "\n",
        "   present_residence_since  age_years  number_existing_credits  \\\n",
        "0                        3         30                        1   \n",
-       "1                        1         27                        1   \n",
-       "2                        2         24                        1   \n",
-       "3                        2         25                        1   \n",
-       "4                        2         24                        2   \n",
        "\n",
        "  checking_status credit_history purpose  ... installment_plans housing   job  \\\n",
        "0             A12            A33     A40  ...              A143    A153  A173   \n",
-       "1             A11            A32     A40  ...              A143    A152  A173   \n",
-       "2             A12            A32     A40  ...              A143    A152  A174   \n",
-       "3             A12            A31     A40  ...              A143    A151  A173   \n",
-       "4             A14            A34     A43  ...              A143    A151  A173   \n",
        "\n",
-       "  number_people_liable telephone foreign_worker  gender  label_value score  \\\n",
-       "0                    1      A191           A201    male            0     1   \n",
-       "1                    1      A191           A201  female            1     1   \n",
-       "2                    1      A191           A201  female            1     1   \n",
-       "3                    1      A191           A201    male            1     1   \n",
-       "4                    1      A192           A201  female            0     0   \n",
+       "  number_people_liable telephone foreign_worker gender  label_value score  \\\n",
+       "0                    1      A191           A201   male            0     1   \n",
        "\n",
        "  predicted_probs  \n",
        "0        0.781304  \n",
-       "1        0.850061  \n",
-       "2        0.939763  \n",
-       "3        0.678382  \n",
-       "4        0.109759  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[1 rows x 24 columns]"
       ]
      },
      "execution_count": 45,
@@ -2742,10 +2626,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "hash": "1bc0af681b6debbd76b10de7ba3014cd62e1e3ee55e8e9a892bbbe23fd8d618c"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3.6.9 64-bit ('modelop': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -2758,7 +2642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
