commit notebook output changes

--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -570,27 +570,21 @@
      "data": {
       "text/plain": [
        "GridSearchCV(cv=RepeatedStratifiedKFold(n_repeats=3, n_splits=10, random_state=0),\n",
-       "             error_score=nan,\n",
-       "             estimator=Pipeline(memory=None,\n",
-       "                                steps=[('onehotencoder',\n",
-       "                                        OneHotEncoder(categories='auto',\n",
-       "                                                      drop=None,\n",
-       "                                                      dtype=<class 'numpy.float64'>,\n",
-       "                                                      handle_unknown='ignore',\n",
-       "                                                      sparse=True)),\n",
+       "             estimator=Pipeline(steps=[('onehotencoder',\n",
+       "                                        OneHotEncoder(handle_unknown='ignore')),\n",
        "                                       ('logisticregression',\n",
-       "                                        LogisticRegression(C=1.0,\n",
-       "                                                           class_weight=None,\n",
-       "                                                           dual=False,\n",
-       "                                                           fit_intercept=...\n",
+       "                                        LogisticRegression(max_iter=1000,\n",
+       "                                                           random_state=0))]),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'logisticregression__C': array([1.00000000e-04, 1.45634848e-04, 2.12095089e-04, 3.08884360e-04,...\n",
+       "       7.54312006e+01, 1.09854114e+02, 1.59985872e+02, 2.32995181e+02,\n",
        "       3.39322177e+02, 4.94171336e+02, 7.19685673e+02, 1.04811313e+03,\n",
        "       1.52641797e+03, 2.22299648e+03, 3.23745754e+03, 4.71486636e+03,\n",
        "       6.86648845e+03, 1.00000000e+04]),\n",
        "                         'logisticregression__class_weight': ['balanced', None],\n",
        "                         'logisticregression__solver': ['liblinear', 'lbfgs',\n",
        "                                                        'newton-cg']},\n",
-       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-       "             scoring=make_scorer(fbeta_score, beta=2), verbose=0)"
+       "             scoring=make_scorer(fbeta_score, beta=2))"
       ]
      },
      "execution_count": 15,
@@ -617,21 +611,11 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('onehotencoder',\n",
-       "                 OneHotEncoder(categories='auto', drop=None,\n",
-       "                               dtype=<class 'numpy.float64'>,\n",
-       "                               handle_unknown='ignore', sparse=True)),\n",
+       "Pipeline(steps=[('onehotencoder', OneHotEncoder(handle_unknown='ignore')),\n",
        "                ('logisticregression',\n",
        "                 LogisticRegression(C=0.0020235896477251557,\n",
-       "                                    class_weight='balanced', dual=False,\n",
-       "                                    fit_intercept=True, intercept_scaling=1,\n",
-       "                                    l1_ratio=None, max_iter=1000,\n",
-       "                                    multi_class='auto', n_jobs=None,\n",
-       "                                    penalty='l2', random_state=0,\n",
-       "                                    solver='lbfgs', tol=0.0001, verbose=0,\n",
-       "                                    warm_start=False))],\n",
-       "         verbose=False)"
+       "                                    class_weight='balanced', max_iter=1000,\n",
+       "                                    random_state=0))])"
       ]
      },
      "execution_count": 16,
@@ -2051,9 +2035,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_disparity_predefined_group()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/smerhi/.pyenv/versions/3.9.8/envs/german_credit_398_env/lib/python3.9/site-packages/pandas/core/indexing.py:1773: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n"
+     ]
+    }
+   ],
    "source": [
     "bias = metrics(metrics_sample)"
    ]
@@ -2182,7 +2186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
