--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1798,9 +1798,7 @@
     "    \n",
     "    data[\"predicted_score\"] = logreg_classifier.predict(data[predictive_features])\n",
     "    \n",
-    "    # MOC expects the action function to be a *yield* function\n",
     "    return data.to_dict(orient=\"records\")\n",
-    "    # yield data.to_dict(orient=\"records\")\n",
     "\n",
     "\n",
     "# modelop.metrics\n",
@@ -1862,9 +1860,7 @@
     "\n",
     "    # Output a JSON object of calculated metrics\n",
     "    \n",
-    "    # MOC expects the action function to be a *yield* function\n",
-    "    return output_metrics_df.to_dict(orient=\"records\")\n",
-    "    # yield output_metrics_df.to_dict(orient=\"records\")"
+    "    return output_metrics_df.to_dict(orient=\"records\")"
    ]
   },
   {
@@ -2168,7 +2164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.8 64-bit ('german_credit_398_env')",
    "language": "python",
    "name": "python3"
   },
@@ -2182,7 +2178,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ffe27ecf9aefb015465c8e22db62d00aad3a9132150f6b09a8bc3c86528aa33e"
+   }
   }
  },
  "nbformat": 4,
