remove yield requirement

--- a/logistic_regression_model_trainer.ipynb
+++ b/logistic_regression_model_trainer.ipynb
@@ -1798,8 +1798,7 @@
     "    \n",
     "    data[\"predicted_score\"] = logreg_classifier.predict(data[predictive_features])\n",
     "    \n",
-    "    # MOC expects the action function to be a *yield* function\n",
-    "    yield data.to_dict(orient=\"records\")\n",
+    "    return data.to_dict(orient=\"records\")\n",
     "\n",
     "\n",
     "# modelop.metrics\n",
@@ -1860,9 +1859,7 @@
     "    output_metrics_df = disparity_metrics_df # or absolute_metrics_df\n",
     "\n",
     "    # Output a JSON object of calculated metrics\n",
-    "    \n",
-    "    # MOC expects the action function to be a *yield* function\n",
-    "    yield output_metrics_df.to_dict(orient=\"records\")"
+    "    return output_metrics_df.to_dict(orient=\"records\")"
    ]
   },
   {
